Configured pom files to allow for FXML testing
-.-

Issue: #24